fixing some texts' style like, color, font-weight

--- a/03-sunnyside-agency-landing-page/index.html
+++ b/03-sunnyside-agency-landing-page/index.html
@@ -396,11 +396,11 @@
       </div>
 
     </footer>
-
+    <div class="desc text-center">Challenge by <a
+        href="https://www.frontendmentor.io/challenges/sunnyside-agency-landing-page-7yVs3B6ef">Frontend Mentor</a>,
+      coded by <a href="https://www.frontendmentor.io/profile/itsaslanov">Aslanov</a>
+    </div>
   </div>
-
-
-
 
 
   <!--
